--- a/front-end-1/aula06/index.html
+++ b/front-end-1/aula06/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 06</title>
+    <title>Tupperware</title>
 </head>
 <body>
+    <h1>Garrafas Tupperware</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam minima pariatur deleniti dolorum, consequuntur rem sed optio, vitae ipsum dolor repellat asperiores doloribus in voluptatem, quam nisi officiis harum laboriosam.</p>
+
+    <img src="multimedia/imagens/ae0441cb96.jpg" width="200px">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+
+    <h2>Fatos sobre a marca Tupperware</h2>
+    <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium natus nostrum incidunt cumque ex perferendis .</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium natus nostrum incidunt cumque ex perferendis .</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium natus nostrum incidunt cumque ex perferendis .</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium natus nostrum incidunt cumque ex perferendis .</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium natus nostrum incidunt cumque ex perferendis .</li>
+    </ul>
     
+    <h2>Conheça mais curiosidades <a href="https://www.tupperware.com.br/">neste link</a></h2>
+
 </body>
 </html>
