Adiciona type circle na lista

--- a/front-end-1/aula06/index.html
+++ b/front-end-1/aula06/index.html
@@ -16,7 +16,7 @@
 
 
     <h2>Fatos sobre a marca Tupperware</h2>
-    <ul>
+    <ul type='circle'>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium natus nostrum incidunt cumque ex perferendis .</li>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium natus nostrum incidunt cumque ex perferendis .</li>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium natus nostrum incidunt cumque ex perferendis .</li>
