Checkpoint front (previa)

--- a/front-end-1/checkPoint1/index.html
+++ b/front-end-1/checkPoint1/index.html
@@ -19,10 +19,28 @@
         A proposta é ampliar as possibilidades de interlocução entre as instituições de ensino – principalmente ensino superior – e as empresas instaladas na cidade. Além de técnicas, as visitas podem ser de lazer como é o caso do <b>beer tour na Cervejaria Madalena.</b> </p>
     </main>
 
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/vGARJwLZ2y0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+    <div class="curiosidades">
+        <h2>Curiosidades</h2>
+        <ol type="i">
+            <li>Lorem, ipsum.</li>
+            <li>Lorem, ipsum dolor.</li>
+            <li>Lorem ipsum dolor sit.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+        </ol>
+    </div>
 
-
-
+    <div class="youtube-icon">
+        <a href="https://web.whatsapp.com/">
+            <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="">
+        </a>
+    </div>
+    <div class="instagram-icon">
+        <a href="https://web.whatsapp.com/">
+            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="">
+        </a>
+    </div>
     
 </body>
 </html>
