--- a/front-end-1/aula13/index.html
+++ b/front-end-1/aula13/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Formulário</title>
+    <title>Formulário SurfTrip</title>
 </head>
 <body>
+    <header>        
+        <img src="images/LogoSurfTripPng.png" alt="">
 
+        <h1>Surf Trip</h1>
+    </header>
     <main>
         <form action="">
 
             <div class="title">
-                <h1>Formulário de cadastro</h2>
+                <h1>Cadastre-se</h2>
             </div>
 
             <fieldset>
